--- a/codelab/pb_to_arrow/BUILD.bazel
+++ b/codelab/pb_to_arrow/BUILD.bazel
@@ -40,6 +40,7 @@ cc_library(
     deps = [
         ":status_util",
         "//arrow",
+        "//gtl:location",
         "//gtl:macros",
         "//gtl:map_util",
         "//gtl:no_destructor",
