[Pb2Arrow] Rename list_debug -> nested_debug.

--- a/codelab/pb_to_arrow/BUILD.bazel
+++ b/codelab/pb_to_arrow/BUILD.bazel
@@ -69,8 +69,8 @@ cc_test(
 )
 
 cc_binary(
-    name = "list_debug",
-    srcs = ["list_debug.cc"],
+    name = "nested_debug",
+    srcs = ["nested_debug.cc"],
     deps = [
         ":converter",
         ":messages_cc_proto",
