--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -407,6 +407,34 @@ cc_test(
 )
 
 cc_library(
+    name = "stl_util",
+    hdrs = ["stl_util.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+    deps = [
+        ":template_util",
+        "//config",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/types:optional",
+    ],
+)
+
+cc_test(
+    name = "stl_util_test",
+    srcs = ["stl_util_unittest.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":stl_util",
+        "//gtl/test:move_only_int",
+        "//gtl/container:circular_deque",
+        "@com_google_absl//absl/container:flat_hash_set",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
     name = "thread_annotations",
     hdrs = ["thread_annotations.h"],
     copts = ONE_DEFAULT_COPTS,
