--- a/codelab/feature_store/benchmark_encoding/BUILD.bazel
+++ b/codelab/feature_store/benchmark_encoding/BUILD.bazel
@@ -1,19 +1,15 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
-load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
+load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library")
 
 cc_binary(
     name = "benchmark_encoding",
     srcs = [
-        "dump.cc",
-        "dump.h",
         "main.cc",
-        "row.cc",
-        "row.h",
     ],
     data = ["rosetta_example_without_map_10.pb"],
     malloc = "@com_github_gperftools_gperftools//:tcmalloc",
     deps = [
-        ":feature_cc_proto",
+        ":dump",
         "//arrow",
         "//codelab/pb_to_arrow:status_util",
         "//gtl:file_system",
@@ -22,18 +18,41 @@ cc_binary(
         "//gtl:posix_file_system",
         "//parquet",
         "//status:status_util",
-        "//util:casts",
         "@bazel_tools//tools/cpp/runfiles",
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_benchmark//:benchmark",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/base:endian",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_protobuf//:protobuf",
+    ],
+)
+
+cc_library(
+    name = "dump",
+    srcs = [
+        "dump.cc",
+        "row.cc",
+    ],
+    hdrs = [
+        "dump.h",
+        "null_output_stream.h",
+        "row.h",
+    ],
+    deps = [
+        ":feature_cc_proto",
+        "//arrow",
+        "//codelab/pb_to_arrow:status_util",
+        "//parquet",
+        "//status:status_util",
+        "//util:casts",
+        "@com_github_google_glog//:glog",
         "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
-        "@com_google_protobuf//:protobuf",
     ],
 )
 
