--- a/codelab/feature_store/benchmark_encoding/BUILD.bazel
+++ b/codelab/feature_store/benchmark_encoding/BUILD.bazel
@@ -29,6 +29,33 @@ cc_binary(
     ],
 )
 
+cc_binary(
+    name = "write_3",
+    srcs = [
+        "write_3.cc",
+    ],
+    data = ["rosetta_example_without_map_10.pb"],
+    malloc = "@com_github_gperftools_gperftools//:tcmalloc",
+    deps = [
+        ":dump",
+        "//arrow",
+        "//codelab/pb_to_arrow:status_util",
+        "//gtl:file_system",
+        "//gtl:macros",
+        "//gtl:no_destructor",
+        "//gtl:posix_file_system",
+        "//parquet",
+        "//status:status_util",
+        "@bazel_tools//tools/cpp/runfiles",
+        "@com_github_gflags_gflags//:gflags",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/base:endian",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+        "@com_google_protobuf//:protobuf",
+    ],
+)
+
 cc_library(
     name = "dump",
     srcs = [
