--- a/service/BUILD.bazel
+++ b/service/BUILD.bazel
@@ -1,4 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load(
+    "//bazel/copts:configure.bzl",
+    "ONE_DEFAULT_COPTS",
+    "ONE_DEFAULT_LINKOPTS",
+    "ONE_TEST_COPTS",
+)
 
 cc_library(
     name = "event_dispatcher",
@@ -8,6 +14,8 @@ cc_library(
         "event_dispatcher_sync_impl.h",
         "event_handler.h",
     ],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_google_glog//:glog",
@@ -20,6 +28,8 @@ cc_library(
 cc_test(
     name = "event_dispatcher_test",
     srcs = ["event_dispatcher_sync_impl_test.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         ":event_dispatcher",
         "@com_google_googletest//:gtest_main",
@@ -33,6 +43,8 @@ cc_library(
         "service.h",
         "service_impl.h",
     ],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
     visibility = ["//visibility:public"],
     deps = [
         ":service_state",
@@ -47,6 +59,8 @@ cc_library(
 cc_test(
     name = "service_test",
     srcs = ["service_impl_test.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         ":service",
         "@com_google_absl//absl/synchronization",
@@ -58,6 +72,8 @@ cc_library(
     name = "service_state",
     srcs = ["service_state.cc"],
     hdrs = ["service_state.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/status",
