--- a/service/BUILD.bazel
+++ b/service/BUILD.bazel
@@ -47,6 +47,7 @@ cc_library(
     linkopts = ONE_DEFAULT_LINKOPTS,
     visibility = ["//visibility:public"],
     deps = [
+        ":event_dispatcher",
         ":service_state",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/status",
