--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,3 +33,4 @@ jobs:
           path: "~/.cache/bazel"
           key: bazel
       - run: bazel build //...
+      - run: bazel test --test_env=srcdir=$PWD/third_party/protobuf/src/google/protobuf/testdata -- //... -//third_party/protobuf:protobuf_test -//third_party/arrow:column_io_benchmark -//codelab/parquet_examples/low_level_api:reader_writer2
