--- a/codelab/feature_store/benchmark_encoding/BUILD.bazel
+++ b/codelab/feature_store/benchmark_encoding/BUILD.bazel
@@ -10,7 +10,7 @@ cc_binary(
     # malloc = "@com_github_gperftools_gperftools//:tcmalloc",
     deps = [
         ":dump",
-        "//base:macros",
+        "//one/base:macros",
         "//codelab/pb_to_arrow:status_util",
         "//gtl:file_system",
         "//gtl:macros",
@@ -43,7 +43,7 @@ cc_binary(
         "//gtl:macros",
         "//gtl:no_destructor",
         "//gtl:posix_file_system",
-        "//base:macros",
+        "//one/base:macros",
         "//third_party/absl/base:endian",
         "//third_party/absl/status",
         "//third_party/absl/strings",
@@ -70,8 +70,8 @@ cc_library(
     deps = [
         ":feature_cc_proto",
         "//codelab/pb_to_arrow:status_util",
-        "//base:casts",
-        "//base:macros",
+        "//one/base:casts",
+        "//one/base:macros",
         "//third_party/absl/container:btree",
         "//third_party/absl/container:flat_hash_map",
         "//third_party/absl/container:flat_hash_set",
