[build] move test into one/test.

--- a/one/codelab/pb_to_arrow/BUILD.bazel
+++ b/one/codelab/pb_to_arrow/BUILD.bazel
@@ -41,7 +41,7 @@ cc_binary(
         ":messages_cc_proto",
         ":status_util",
         "//gtl:macros",
-        "//test:macros",
+        "//one/test:macros",
         "//third_party/absl/random",
         "//third_party/absl/status",
         "//third_party/absl/types:span",
@@ -100,7 +100,7 @@ cc_binary(
         ":converter",
         ":messages_cc_proto",
         ":status_util",
-        "//test:macros",
+        "//one/test:macros",
         "//third_party/absl/base:core_headers",
         "//third_party/absl/status",
         "//third_party/absl/types:span",
