--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,16 @@ name = "one"
 version = "0.0.1"
 
 [tool.poetry.dependencies]
-absl-py = "^0.12.0"
+absl-py = ">=0.12.0 <1.0.0"
 python = "^3.6.1"
+requests = "^2.25.1"
+sh = "^1.14.1"
 
 [tool.poetry.dev-dependencies]
+cpplint = "^1.5.5"
 isort = "^5.8.0"
 pylint = "^2.7.4"
-yapf = "^0.31.0"
-cpplint = "^1.5.5"
+yapf = ">=0.31.0 <1.0.0"
 
 [[tool.poetry.source]]
 default = true
