--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,8 @@ force_single_line = true
 indent = "    "
 length_sort = true
 line_length = 80
+
+[tool.yapf]
+based_on_style = "google"
+column_limit = 80
+split_before_named_assigns = true
