--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sh = "^1.14.1"
 cpplint = "^1.5.5"
 isort = "^5.8.0"
 pylint = "^2.7.4"
+pyright = "^0.0.1"
 yapf = ">=0.31.0 <1.0.0"
 
 [[tool.poetry.source]]
@@ -34,3 +35,9 @@ line_length = 80
 based_on_style = "google"
 column_limit = 80
 split_before_named_assigns = true
+
+[tool.pyright]
+exclude = [
+  "third_party/**",
+  "third_party_bak/**",
+]
