[build] fix build nail.

--- a/nail/BUILD.bazel
+++ b/nail/BUILD.bazel
@@ -9,24 +9,24 @@ genrule(
     name = "gen_parser_template_h",
     srcs = ["parser_template.h"],
     outs = ["parser_template.h.cc"],
-    cmd = "$(location //third_party/xxd:xxd) -i $< > $@",
-    tools = ["//third_party/xxd"],
+    cmd = "$(location //third_party/vim:xxd) -i $< > $@",
+    tools = ["//third_party/vim:xxd"],
 )
 
 genrule(
     name = "gen_parser_template_c",
     srcs = ["parser_template.c"],
     outs = ["parser_template.c.cc"],
-    cmd = "$(location //third_party/xxd:xxd) -i $< > $@",
-    tools = ["//third_party/xxd"],
+    cmd = "$(location //third_party/vim:xxd) -i $< > $@",
+    tools = ["//third_party/vim:xxd"],
 )
 
 genrule(
     name = "gen_parser_template_cc",
     srcs = ["parser_template.cc"],
     outs = ["parser_template.cc.cc"],
-    cmd = "$(location //third_party/xxd:xxd) -i $< > $@",
-    tools = ["//third_party/xxd"],
+    cmd = "$(location //third_party/vim:xxd) -i $< > $@",
+    tools = ["//third_party/vim:xxd"],
 )
 
 cc_library(
