--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ version = "0.0.1"
 
 [tool.poetry.dependencies]
 absl-py = ">=0.12.0 <1.0.0"
+ortools = "^9.0.9048"
 python = "^3.6.1"
 requests = "^2.25.1"
 sh = "^1.14.1"
