--- a/.bazelrc
+++ b/.bazelrc
@@ -2,6 +2,9 @@
 build --cxxopt="-std=c++14" --cxxopt="-Wno-c++17-extensions" --cxxopt="-Wno-undef"
 build --conlyopt="-std=c11"
 
+build --copt=-march=ivybridge
+build --copt=-gdwarf-5
+
 # build --proto_compiler=//third_party/protobuf:protoc
 # build --proto_toolchain_for_cc=//third_party/protobuf:cc_toolchain
 # build --proto_toolchain_for_java=//third_party/protobuf:java_toolchain
