--- a/.bazelrc
+++ b/.bazelrc
@@ -4,6 +4,7 @@ build --conlyopt="-std=c11"
 
 build --copt=-march=x86-64-v3 --copt=-msse2 --copt=-msse4.2 --copt=-mavx --copt=-mbmi2
 build --copt=-gdwarf-5
+build --incompatible_enable_cc_toolchain_resolution
 
 # build --proto_compiler=//third_party/protobuf:protoc
 # build --proto_toolchain_for_cc=//third_party/protobuf:cc_toolchain
@@ -38,7 +39,7 @@ build --action_env=CXX
 build --action_env=LLVM_CONFIG
 build --action_env=PATH
 
-build --action_env=CC=clang --action_env=CXX=clang++
+#build --action_env=CC=clang --action_env=CXX=clang++
 build:gcc --action_env=CC=gcc --action_env=CXX=g++
 
 # Default options should come above this line.
