[chore] Improve generate_compilation_database_all.sh

--- a/.gitignore
+++ b/.gitignore
@@ -424,6 +424,7 @@ $RECYCLE.BIN/
 
 # Generated compile_commands.json
 /compile_commands.json
+/.bazel-one
 
 # Generated clang.bazelrc
 /clang.bazelrc
