--- a/one/codelab/google_benchmark_lab/BUILD.bazel
+++ b/one/codelab/google_benchmark_lab/BUILD.bazel
@@ -3,6 +3,9 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 cc_binary(
     name = "google_benchmark_lab",
     srcs = ["main.cc"],
+    tags = [
+        "benchmark",
+    ],
     deps = [
         "@com_github_google_benchmark//:benchmark_main",
         "@com_github_google_glog//:glog",
