--- a/one/codelab/google_benchmark_lab/BUILD.bazel
+++ b/one/codelab/google_benchmark_lab/BUILD.bazel
@@ -1,6 +1,6 @@
-load("@rules_cc//cc:defs.bzl", "cc_binary")
+load("@rules_cc//cc:defs.bzl", "cc_test")
 
-cc_binary(
+cc_test(
     name = "google_benchmark_lab",
     srcs = ["main.cc"],
     tags = [
