--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,4 +41,4 @@ jobs:
       - run: tools/setup_clang.sh /usr/lib/llvm-13
       - run: bazel build --config=libc++ //...
       - run: bazel test --config=libc++ //... --test_tag_filters=-benchmark
-      - run: bazel test -c opt --config=libc++ //... --test_tag_filters=benchmark
+      - run: bazel test -c opt --config=libc++ //... --test_tag_filters=benchmark,-runtime_broken
