--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -25,7 +25,10 @@ config_setting(
 
 selects.config_setting_group(
     name = "enable_sse2_or_later",
-    match_any = [":enable_sse2", ":enable_sse42"],
+    match_any = [
+        ":enable_sse2",
+        ":enable_sse42",
+    ],
 )
 
 config_setting(
